# wchar-rs

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  appveyor.yml  build.rs  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
impl/: Cargo.toml
impl/src/: encode.rs  lib.rs  parse.rs
src/: lib.rs
tests/: compare.rs  compile_tests.rs  include_wch.rs  include_wchz.rs  test.rs  tests.rs  wch.rs  wch_c.rs  wch_char.rs  wchar_t.rs  wchz.rs
tests/cases/: compare.rs  nul-compile-fail-1.rs  nul-compile-fail-1.stderr  nul-compile-fail-2.rs  nul-compile-fail-2.stderr  wch.rs  wch_c.rs
tests/data/: basic.txt  complex.txt  emoji.txt  nul_chars.txt
tests/ui/: invalid_type_wch.rs  invalid_type_wch.stderr  invalid_type_wch_c.rs  invalid_type_wch_c.stderr  invalid_type_wchz.rs  invalid_type_wchz.stderr  nul_end_wchz.rs  nul_end_wchz.stderr  nul_mid_wchz.stderr  overflow_char.rs  overflow_char.stderr  wch_c_nul_end.rs  wch_c_nul_end.stderr  wch_c_nul_mid.rs  wch_c_nul_mid.stderr  wchz_nul_end.stderr  wchz_nul_mid.rs  wchz_nul_mid.stderr
tests/ui_unstable/: dir_include_wch.rs  dir_include_wch.stderr  dir_include_wchz.rs  dir_include_wchz.stderr  invalid_type_include_wch.rs  invalid_type_include_wch.stderr  invalid_type_include_wchz.rs  invalid_type_include_wchz.stderr  missing_file_include_wch.rs  missing_file_include_wch.stderr  missing_file_include_wchz.rs  missing_file_include_wchz.stderr  nul_chars_include_wchz.rs  nul_chars_include_wchz.stderr
tests/util/: mod.rs
wchar-impl/: Cargo.toml
wchar-impl/src/: lib.rs
wchar-rs/: Cargo.toml
wchar-rs-macro/: Cargo.toml
wchar-rs-macro/src/: lib.rs
wchar-rs/src/: lib.rs
wchar-rs/tests/: tests.rs
