[package]
name = "wchar"
version = "0.7.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Procedural macros for compile time UTF-16 strings"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/Juici/wchar-rs"
documentation = "https://docs.rs/wchar"

keywords = ["wide", "string", "wchar", "utf16"]
categories = ["text-processing"]

[dependencies]
wchar-impl = { version = "=0.7.0", path = "impl" }

[dev-dependencies]
trybuild = "1.0"

[workspace]
members = ["impl"]
