[package]
name = "wchar"
version = "0.10.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Procedural macros for compile time UTF-16 strings"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

build = "build.rs"

repository = "https://github.com/Juici/wchar-rs"
documentation = "https://docs.rs/wchar"

keywords = ["wide", "string", "wchar", "utf16"]
categories = ["text-processing"]

[features]
default = []
unstable = ["wchar-impl/unstable"]

[dependencies]
cfg-if = "1.0.0"
wchar-impl = { version = "0.10.0", path = "impl" }

[dev-dependencies]
anyhow = "1.0"
rustversion = "1.0"
trybuild = { version = "1.0", features = ["diff"] }

[workspace]
members = ["impl"]
