[package]
name = "wchar-impl"
version = "0.7.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Internal implementation of wchar using proc-macro-hack"
edition = "2018"
license = "MIT or Apache-2.0"

repository = "https://github.com/Juici/wchar-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
