[package]
name = "wchar-impl"
version = "0.8.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Internal implementation of wchar using proc-macro-hack"
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/Juici/wchar-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro"] }
