[package]
name = "wchar-impl"
version = "0.11.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Internal implementation of wchar."
edition = "2018"
license = "MIT OR Apache-2.0"

repository = "https://github.com/Juici/wchar-rs"

[lib]
proc-macro = true

[features]
default = []
unstable = ["proc-macro2/nightly"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["parsing", "printing", "proc-macro"] }
