[package]
name = "wchar-impl"
version = "0.5.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Internal implementation of wchar using proc-macro-hack"
edition = "2018"

documentation = "https://docs.rs/wchar"
homepage = "https://github.com/Juici/wchar-rs"
repository = "https://github.com/Juici/wchar-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
