[package]
name = "wchar-impl"
version = "0.5.0"
authors = ["Juici <juicy66173@gmail.com>"]
description = "Internal implementation of wchar using proc-macro-hack"
edition = "2018"

documentation = "https://docs.rs/wchar"
homepage = "https://github.com/Juici/wchar-rs"
repository = "https://github.com/Juici/wchar-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
proc-macro-hack = "0.5.11"
quote = "1.0.2"
syn = { version = "1.0.7", default-features = false }
